# opswrapper

./: .git-blame-ignore-revs  .gitignore  .style.yapf  CHANGELOG.md  LICENSE.txt  README.md  README.rst  Taskfile.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tasks.py
doc/source/: conf.py  index.rst
examples/: UniaxialMaterialAnalysis.ipynb  UniaxialMaterialAnalysis.py
opswrapper/: analysis.py  base.py  materials.py  model.py  output.py
pkg/: meta.yaml
src/opswrapper/: __init__.py  algorithm.py  analysis.py  backports.py  base.py  config.py  constraints.py  element.py  formatting.py  integration.py  integrator.py  material.py  model.py  output.py  section.py  test.py  uniaxialmaterialanalysis.py  utils.py
test/: test_algorithm.py  test_constraints.py  test_element.py  test_integration.py  test_integrator.py  test_material.py  test_model.py  test_recorders.py  test_section.py  test_test.py  test_utils.py
tests/: test_material.py  test_model.py  test_section.py
