[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    'B',
    'C4',
    'E',
    'F',
    'NPY',
    'PIE',
    'PL',
    'PT',
    'RUF',
    'TRY',
    'W',
]
ignore = [
    'E501',  # Line length
    'PLR0911',  # annoying heuristic
    'PLR0912',  # annoying heuristic
    'PLR0913',  # annoying heuristic
    'PLR0915',  # annoying heuristic
    'PLR2004',  # Magic values
    'TRY003',  # Messages in exception; this is silly, tbh
]
allowed-confusables = ['α', 'γ']

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.format]
quote-style = 'double'
