[metadata]
name = opswrapper
version = file: src/opswrapper/__version__
author = Peter Talley
author_email = ptalley2@vols.utk.edu
url = https://github.com/otaithleigh/opswrapper
license = MIT
description = Python helpers for writing OpenSees scripts.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages =
    opswrapper
python_requires = >=3.7
install_requires =
    numpy
    tomli
    xarray

[options.package_data]
opswrapper =
    __version__
